<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="100dp"
    android:paddingVertical="20dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        style="@style/MainLLayout"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_sensor"
            style="@style/MainBtn"
            android:layout_weight="1"
            android:background="@mipmap/ic_launcher" />

        <TextView
            style="@style/MainText"
            android:layout_weight="2"
            android:text="@string/main_sensor" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        style="@style/MainLLayout"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_camera"
            style="@style/MainBtn"
            android:layout_weight="1"
            android:background="@mipmap/ic_launcher" />

        <TextView
            style="@style/MainText"
            android:layout_weight="2"
            android:text="@string/main_camera" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        style="@style/MainLLayout"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_device_control"
            style="@style/MainBtn"
            android:layout_weight="1"
            android:background="@mipmap/ic_launcher" />

        <TextView
            style="@style/MainText"
            android:layout_weight="2"
            android:text="@string/main_device_control" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        style="@style/MainLLayout"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_af_activity"
            style="@style/MainBtn"
            android:layout_weight="1"
            android:background="@mipmap/ic_launcher" />

        <TextView
            style="@style/MainText"
            android:layout_weight="2"
            android:text="@string/main_all" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        style="@style/MainLLayout"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_iottalk_glasses"
            style="@style/MainBtn"
            android:layout_weight="1"
            android:background="@mipmap/ic_launcher" />

        <TextView
            style="@style/MainText"
            android:layout_weight="2"
            android:text="@string/main_iottalk_glasses" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>