<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_connect"
        style="@style/SensorText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/connect_info" />

    <TextView
        android:id="@+id/text_glasses"
        style="@style/SensorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Glasses sensors : " />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_acc"
            style="@style/SensorText"
            android:layout_width="170dp"
            android:text="\tAcceleration" />

        <TextView
            android:id="@+id/text_acc_v"
            style="@style/SensorText"
            android:text="@string/sensor_value30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_gyro"
            style="@style/SensorText"
            android:layout_width="170dp"
            android:text="\tGyroscope" />

        <TextView
            android:id="@+id/text_gyro_v"
            style="@style/SensorText"
            android:text="@string/sensor_value30" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_title_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_light"
            style="@style/SensorText"
            android:layout_width="170dp"
            android:text="\tLight" />

        <TextView
            android:id="@+id/text_light_v"
            style="@style/SensorText"
            android:text="@string/sensor_value10" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_title_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_ori"
            style="@style/SensorText"
            android:layout_width="170dp"
            android:text="\tOrientation" />

        <TextView
            android:id="@+id/text_ori_v"
            style="@style/SensorText"
            android:text="@string/sensor_value30" />

    </androidx.appcompat.widget.LinearLayoutCompat>
    <TextView
        android:id="@+id/text_connect_ph"
        style="@style/SensorText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/connect_info" />

    <TextView
        android:id="@+id/text_phone"
        style="@style/SensorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Phone sensors : " />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_title_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_acc_ph"
            style="@style/SensorText"
            android:layout_width="170dp"
            android:text="\tAcceleration" />

        <TextView
            android:id="@+id/text_acc_ph_v"
            style="@style/SensorText"
            android:text="@string/sensor_value30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_title_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_gyro_ph"
            style="@style/SensorText"
            android:layout_width="170dp"
            android:text="\tGyroscope" />

        <TextView
            android:id="@+id/text_gyro_ph_v"
            style="@style/SensorText"
            android:text="@string/sensor_value30" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_title_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_light_ph"
            style="@style/SensorText"
            android:layout_width="170dp"
            android:text="\tLight" />

        <TextView
            android:id="@+id/text_light_ph_v"
            style="@style/SensorText"
            android:text="@string/sensor_value10" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_title_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_ori_ph"
            style="@style/SensorText"
            android:layout_width="170dp"
            android:text="\tOrientation" />

        <TextView
            android:id="@+id/text_ori_ph_v"
            style="@style/SensorText"
            android:text="@string/sensor_value30" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>